refactor: streamline ExerciseLibraryCli and PlanEditorCli for improved error handling and user feedback