@@ -9,7 +9,6 @@ import com.example.fitplannerclient.ui.cli.CliView;
 import com.example.fitplannerclient.ui.cli.DashboardCli;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -50,36 +49,48 @@ public class WorkoutPlanLibraryCli extends AbstractCliView {
             }
             case 6 -> eliminaPiano();
             case 7 -> assegnaPiano();
+            default -> {
+                return this;
+            }
         }
 
         return this;
     }
 
     private void visualizzaPiani() {
-        try {
-            List<WorkoutPlanSummaryBean> plans = planManager.getMyCreatedPlansSummaryAsync().join();
-            if (plans == null || plans.isEmpty()) {
-                printer.printInfo("Nessun piano trovato.");
-            } else {
-                List<ProfileBean> athletes = profileManager.getMyAthletesAsync().join();
+        List<WorkoutPlanSummaryBean> plans = planManager.getMyCreatedPlansSummaryAsync()
+                .exceptionally(e -> {
+                    printer.printException("Errore durante il caricamento dei piani: ", e);
+                    return new ArrayList<>();
+                }).join();
 
-                List<String> headers = Arrays.asList("Titolo Piano", "Assegnato A");
-                List<List<String>> data = new ArrayList<>();
-                for (WorkoutPlanSummaryBean plan : plans) {
-                    String assignedTo = "Nessuno";
-                    if (plan.getAssignedTo() != null) {
-                        ProfileBean athlete = getAthleteById(athletes, plan.getAssignedTo());
-                        assignedTo = (athlete != null)
-                                ? athlete.getFirstName() + " " + athlete.getLastName()
-                                : plan.getAssignedTo();
-                    }
-                    data.add(Arrays.asList(plan.getPlanTitle() != null ? plan.getPlanTitle() : "Senza Titolo", assignedTo));
+        if (plans == null || plans.isEmpty()) {
+            printer.printInfo("Nessun piano trovato.");
+        } else {
+            List<ProfileBean> athletes = profileManager.getMyAthletesAsync()
+                    .exceptionally(e -> {
+                        printer.printException("Errore durante il caricamento degli atleti: ", e);
+                        return new ArrayList<>();
+                    }).join();
+
+            List<String> headers = List.of("Titolo Piano", "Assegnato A");
+            List<List<String>> data = new ArrayList<>();
+
+            for (WorkoutPlanSummaryBean plan : plans) {
+                String assignedTo = "Nessuno";
+
+                if (plan.getAssignedTo() != null) {
+                    ProfileBean athlete = getAthleteById(athletes, plan.getAssignedTo());
+                    assignedTo = (athlete != null)
+                            ? athlete.getFirstName() + " " + athlete.getLastName()
+                            : plan.getAssignedTo();
                 }
-                printer.printTable(headers, data);
+
+                data.add(List.of(plan.getPlanTitle() != null ? plan.getPlanTitle() : "Senza Titolo", assignedTo));
             }
-        } catch (Exception e) {
-            printer.printException("Errore durante il caricamento dei piani: ", e);
+            printer.printTable(headers, data);
         }
+
         reader.waitForEnter();
     }
 
@@ -89,33 +100,35 @@ public class WorkoutPlanLibraryCli extends AbstractCliView {
     }
 
     private String selezionaPiano(String action) {
-        try {
-            List<WorkoutPlanSummaryBean> plans = planManager.getMyCreatedPlansSummaryAsync().join();
-            if (plans == null || plans.isEmpty()) {
-                printer.printInfo("Nessun piano trovato.");
-                reader.waitForEnter();
-                return null;
-            }
-            return reader.selectFrom("Seleziona un piano da " + action.toLowerCase() + ":", plans,
-                            p -> p.getPlanTitle() != null ? p.getPlanTitle() : "Senza Titolo")
-                    .map(WorkoutPlanSummaryBean::getPlanId)
-                    .orElse(null);
-        } catch (Exception e) {
-            printer.printException("Errore durante il caricamento dei piani: ", e);
+        List<WorkoutPlanSummaryBean> plans = planManager.getMyCreatedPlansSummaryAsync()
+                .exceptionally(e -> {
+                    printer.printException("Errore durante il caricamento dei piani: ", e);
+                    return new ArrayList<>();
+                }).join();
+
+        if (plans == null || plans.isEmpty()) {
+            printer.printInfo("Nessun piano trovato.");
             reader.waitForEnter();
             return null;
         }
+
+        return reader.selectFrom("Seleziona un piano da " + action.toLowerCase() + ":", plans,
+                        p -> p.getPlanTitle() != null ? p.getPlanTitle() : "Senza Titolo"
+                ).map(WorkoutPlanSummaryBean::getPlanId)
+                .orElse(null);
     }
+
 
     private void eliminaPiano() {
         String planId = selezionaPiano("Eliminare");
         if (planId != null) {
-            try {
-                planManager.deletePlanAsync(planId).join();
-                printer.printSuccess("Piano eliminato con successo!");
-            } catch (Exception e) {
-                printer.printException("Errore durante l'eliminazione: ", e);
-            }
+            planManager.deletePlanAsync(planId)
+                    .exceptionally(e -> {
+                        printer.printException("Errore durante l'eliminazione: ", e);
+                        return null;
+                    }).join();
+
+            printer.printSuccess("Piano eliminato con successo!");
             reader.waitForEnter();
         }
     }
@@ -124,24 +137,25 @@ public class WorkoutPlanLibraryCli extends AbstractCliView {
         String planId = selezionaPiano("Assegnare");
         if (planId == null) return;
 
-        try {
-            List<ProfileBean> athletes = profileManager.getMyAthletesAsync().join();
-            if (athletes == null || athletes.isEmpty()) {
-                printer.printInfo("Non hai atleti a cui assegnare il piano.");
-                reader.waitForEnter();
-                return;
-            }
+        List<ProfileBean> athletes = profileManager.getMyAthletesAsync()
+                .exceptionally(e -> {
+                    printer.printException("Errore durante il caricamento degli atleti: ", e);
+                    return new ArrayList<>();
+                }).join();
 
-            Optional<ProfileBean> selected = reader.selectFrom("Seleziona l'atleta a cui assegnare il piano:", athletes,
-                    a -> a.getFirstName() + " " + a.getLastName() + " (" + a.getContactEmail() + ")");
-            if (selected.isEmpty()) return;
-
-            planManager.assignPlanToAthleteAsync(planId, selected.get().getUserId()).join();
-            printer.printSuccess("Piano assegnato con successo!");
-
-        } catch (Exception e) {
-            printer.printException("Errore durante l'assegnazione: ", e);
+        if (athletes == null || athletes.isEmpty()) {
+            printer.printInfo("Non hai atleti a cui assegnare il piano.");
+            reader.waitForEnter();
+            return;
         }
+
+        Optional<ProfileBean> selected = reader.selectFrom("Seleziona l'atleta a cui assegnare il piano:", athletes,
+                a -> a.getFirstName() + " " + a.getLastName() + " (" + a.getContactEmail() + ")");
+        if (selected.isEmpty()) return;
+
+        planManager.assignPlanToAthleteAsync(planId, selected.get().getUserId()).join();
+        printer.printSuccess("Piano assegnato con successo!");
+
         reader.waitForEnter();
     }
 }
